--- a/core/composer.json
+++ b/core/composer.json
@@ -8,7 +8,8 @@
   ],
   "require": {
     "doctrine/orm": "^2.5",
-    "myclabs/php-enum": "^1.5"
+    "myclabs/php-enum": "^1.5",
+    "gedmo/doctrine-extensions": "^2.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.6",
