--- a/core/composer.json
+++ b/core/composer.json
@@ -9,7 +9,8 @@
   "require": {
     "doctrine/orm": "^2.5",
     "myclabs/php-enum": "^1.5",
-    "gedmo/doctrine-extensions": "^2.4"
+    "gedmo/doctrine-extensions": "^2.4",
+    "php-di/php-di": "^5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.6",
