--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -6,8 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "laravel-doctrine/extensions": "1.0.*",
+        "laravel-doctrine/orm": "1.3.*",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "yajra/laravel-datatables-oracle": "^7.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -19,7 +22,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "EventoOriginal\\Core\\": "../../core/src"
         }
     },
     "autoload-dev": {
