--- a/core/composer.json
+++ b/core/composer.json
@@ -10,7 +10,8 @@
     "doctrine/orm": "^2.5",
     "myclabs/php-enum": "^1.5",
     "gedmo/doctrine-extensions": "^2.4",
-    "php-di/php-di": "^5.4"
+    "php-di/php-di": "^5.4",
+    "moneyphp/money": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.6",
