--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -10,6 +10,7 @@
         "laravel-doctrine/orm": "1.3.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "yajra/laravel-datatables-oracle": "^7.5"
     },
     "require-dev": {
