--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -24,7 +24,8 @@
         "psr-4": {
             "App\\": "app/",
             "EventoOriginal\\Core\\": "../../core/src"
-        }
+        },
+        "files": ["app/Helpers/helpers.php"]
     },
     "autoload-dev": {
         "psr-4": {
