--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "gloudemans/shoppingcart": "^2.3",
         "intervention/image": "^2.4",
         "laravel-doctrine/extensions": "1.0.*",
         "laravel-doctrine/orm": "1.3.*",
