--- a/frontend/src/.env.example
+++ b/frontend/src/.env.example
@@ -13,8 +13,8 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
+CACHE_DRIVER=redis
+SESSION_DRIVER=redis
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
@@ -31,3 +31,6 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+DOCTRINE_LOGGER=LaravelDoctrine\ORM\Loggers\LaravelDebugbarLogger
+DOCTRINE_CACHE=redis
