--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "league/flysystem-aws-s3-v3": "~1.0",
+        "predis/predis": "^1.0",
         "yajra/laravel-datatables-oracle": "^7.5"
     },
     "require-dev": {
