Add backend menu items views

--- a/frontend/src/.env.example
+++ b/frontend/src/.env.example
@@ -34,3 +34,8 @@ PUSHER_APP_SECRET=
 
 DOCTRINE_LOGGER=LaravelDoctrine\ORM\Loggers\LaravelDebugbarLogger
 DOCTRINE_CACHE=redis
+
+AWS_KEY=AKIAITJJRGTQ6NLRRB5A
+AWS_SECRET=RQww7DbGWivzw/Tjh64jNggFfI/gAMFvWNq8y8yg
+AWS_REGION=us-east-2
+AWS_BUCKET=evento-original-s3
