--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "^2.4",
+        "gedmo/doctrine-extensions": "^2.4",
         "gloudemans/shoppingcart": "^2.3",
         "intervention/image": "^2.4",
         "laravel-doctrine/extensions": "1.0.*",
@@ -15,13 +16,12 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "league/flysystem-aws-s3-v3": "~1.0",
+        "moneyphp/money": "^3.0",
+        "myclabs/php-enum": "^1.5",
         "predis/predis": "^1.0",
         "vlucas/phpdotenv": "^2.4",
         "webpatser/laravel-uuid": "^3.0",
-        "yajra/laravel-datatables-oracle": "~8.0",
-        "myclabs/php-enum": "^1.5",
-        "gedmo/doctrine-extensions": "^2.4",
-        "moneyphp/money": "^3.0"
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
