--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -22,7 +22,9 @@
         "vlucas/phpdotenv": "^2.4",
         "webpatser/laravel-uuid": "^3.0",
         "yajra/laravel-datatables-oracle": "~8.0",
-        "pda/pheanstalk": "~3.0"
+        "pda/pheanstalk": "~3.0",
+        "drewm/mailchimp-api": "^2.4",
+        "mandrill/mandrill": "1.0.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
