--- a/frontend/src/.env.example
+++ b/frontend/src/.env.example
@@ -28,6 +28,11 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+MANDRILL_ENABLE=true
+MANDRILL_SANDBOX=true
+MANDRILL_TEST=
+MANDRILL_PRODUCTION=
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
