--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "^2.4",
+        "drewm/mailchimp-api": "^2.4",
         "gedmo/doctrine-extensions": "^2.4",
         "gloudemans/shoppingcart": "^2.3",
         "intervention/image": "^2.4",
@@ -16,15 +17,15 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "league/flysystem-aws-s3-v3": "~1.0",
+        "mailin-api/mailin-api-php": "^1.0",
+        "mandrill/mandrill": "1.0.*",
         "moneyphp/money": "^3.0",
         "myclabs/php-enum": "^1.5",
+        "pda/pheanstalk": "~3.0",
         "predis/predis": "^1.0",
         "vlucas/phpdotenv": "^2.4",
         "webpatser/laravel-uuid": "^3.0",
-        "yajra/laravel-datatables-oracle": "~8.0",
-        "pda/pheanstalk": "~3.0",
-        "drewm/mailchimp-api": "^2.4",
-        "mandrill/mandrill": "1.0.*"
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
