Paypal payouts WIP

--- a/frontend/src/.env.example
+++ b/frontend/src/.env.example
@@ -44,3 +44,7 @@ AWS_KEY=AKIAITJJRGTQ6NLRRB5A
 AWS_SECRET=RQww7DbGWivzw/Tjh64jNggFfI/gAMFvWNq8y8yg
 AWS_REGION=us-east-2
 AWS_BUCKET=evento-original-s3
+
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+SANDBOX_MODE=true
