--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -21,6 +21,7 @@
         "mandrill/mandrill": "1.0.*",
         "moneyphp/money": "^3.0",
         "myclabs/php-enum": "^1.5",
+        "paypal/rest-api-sdk-php": "*",
         "pda/pheanstalk": "~3.0",
         "predis/predis": "^1.0",
         "vlucas/phpdotenv": "^2.4",
