Affiliate payouts WIP

--- a/frontend/src/.env.example
+++ b/frontend/src/.env.example
@@ -45,6 +45,6 @@ AWS_SECRET=RQww7DbGWivzw/Tjh64jNggFfI/gAMFvWNq8y8yg
 AWS_REGION=us-east-2
 AWS_BUCKET=evento-original-s3
 
-PAYPAL_CLIENT_ID=
+PAYPAL_SANDBOX_CLIENT_ID=
 PAYPAL_CLIENT_SECRET=
 SANDBOX_MODE=true
