--- a/frontend/src/.env.example
+++ b/frontend/src/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:btcTolg56YQ4TREzJ7FDsyta7YKICNnzC9ge0SyGpLQ=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -17,7 +17,7 @@ CACHE_DRIVER=redis
 SESSION_DRIVER=redis
 QUEUE_DRIVER=sync
 
-REDIS_HOST=localhost
+REDIS_HOST=172.1.0.3
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -39,3 +39,7 @@ AWS_KEY=AKIAITJJRGTQ6NLRRB5A
 AWS_SECRET=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
 AWS_REGION=us-east-2
 AWS_BUCKET=evento-original-s3
+
+PAYPAL_CLIENT_ID=AcvOSFT5bHvwU9bU-HArS8ZrxWUDGI_k2FPbmI0sdeZdlaHZSwG2wAlywn3dx31FRNfhK-DX3Nk9CTBj
+PAYPAL_CLIENT_SECRET=EMBWaSjAulElmEvpeEYepbxl9sTcFhld_Zq0gpxvc7z2Y7GWZDSwMBLrlrrB95koxmQa3fJBU9BsBfGv
+PAYPAL_SANDBOX_MODE=true
