Improve pagination styles

--- a/frontend/src/.env.example
+++ b/frontend/src/.env.example
@@ -44,6 +44,7 @@ AWS_KEY=AKIAITJJRGTQ6NLRRB5A
 AWS_SECRET=RQww7DbGWivzw/Tjh64jNggFfI/gAMFvWNq8y8yg
 AWS_REGION=us-east-2
 AWS_BUCKET=evento-original-s3
+AWS_S3_URL=https://evento-original-s3.s3.us-east-2.amazonaws.com
 
 PAYPAL_CLIENT_ID=
 PAYPAL_CLIENT_SECRET=
