--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -16,6 +16,7 @@
         "laravel-doctrine/orm": "1.4.*",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "~5.0",
         "league/flysystem-aws-s3-v3": "~1.0",
         "mailin-api/mailin-api-php": "^1.0",
         "mandrill/mandrill": "1.0.*",
@@ -24,6 +25,7 @@
         "paypal/rest-api-sdk-php": "*",
         "pda/pheanstalk": "~3.0",
         "predis/predis": "^1.0",
+        "symfony/intl": "^4.0",
         "vlucas/phpdotenv": "^2.4",
         "webpatser/laravel-uuid": "^3.0",
         "yajra/laravel-datatables-oracle": "~8.0"
