Fix url of image in cart

--- a/frontend/src/.env.example
+++ b/frontend/src/.env.example
@@ -43,3 +43,5 @@ AWS_BUCKET=evento-original-s3
 PAYPAL_CLIENT_ID=AcvOSFT5bHvwU9bU-HArS8ZrxWUDGI_k2FPbmI0sdeZdlaHZSwG2wAlywn3dx31FRNfhK-DX3Nk9CTBj
 PAYPAL_CLIENT_SECRET=EMBWaSjAulElmEvpeEYepbxl9sTcFhld_Zq0gpxvc7z2Y7GWZDSwMBLrlrrB95koxmQa3fJBU9BsBfGv
 PAYPAL_SANDBOX_MODE=true
+PAYPAL_CONFIRM_URL=localhost
+PAYPAL_CANCEL_URL=localhost/cancel
