--- a/frontend/src/composer.json
+++ b/frontend/src/composer.json
@@ -19,19 +19,15 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "league/flysystem-aws-s3-v3": "~1.0",
-<<<<<<< HEAD
         "moneyphp/money": "^3.0",
         "myclabs/php-enum": "^1.5",
-=======
         "mockery/mockery": "^0.9.9",
-        "moneyphp/money": "^3.0",
-        "myclabs/php-enum": "^1.5",
         "paypal/rest-api-sdk-php": "*",
->>>>>>> web_checkout_paypal
         "php-di/php-di": "^5.4",
         "predis/predis": "^1.0",
         "vlucas/phpdotenv": "^2.4",
-        "yajra/laravel-datatables-oracle": "^7.5"
+        "yajra/laravel-datatables-oracle": "^7.5",
+        "pda/pheanstalk": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.7",
