Last fixes to affiliates

--- a/frontend/src/.env.example
+++ b/frontend/src/.env.example
@@ -2,6 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:btcTolg56YQ4TREzJ7FDsyta7YKICNnzC9ge0SyGpLQ=
 APP_DEBUG=true
+APP_LOG=single
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
@@ -16,6 +17,8 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 SESSION_DRIVER=redis
 QUEUE_DRIVER=sync
+
+QUEUE_HOST=beanstalkd
 
 REDIS_HOST=172.1.0.3
 REDIS_PASSWORD=null
