--- a/laradock/php-fpm/Dockerfile-71
+++ b/laradock/php-fpm/Dockerfile-71
@@ -318,3 +318,9 @@ WORKDIR /var/www
 CMD ["php-fpm"]
 
 EXPOSE 9000
+
+RUN apt-get -y update && \
+    apt-get install pkg-config libmagickwand-dev -y && \
+    pecl install imagick
+
+RUN docker-php-ext-enable imagick
